--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -104,17 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(page_content='harrison worked at kensho'),\n",
-       " Document(page_content='bears like to eat honey')]"
+       "'Harrison worked at Kensho.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
