--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,69 +6,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from langchain.chat_models import ChatOpenAI\n",
-    "# few shot: 모델들에게 예제를 줘서 더 나은 대답을 할 수 있게 함.\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate \n",
+    "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "from langchain.prompts.prompt import PromptTemplate\n",
     "\n",
-    "chat = ChatOpenAI(temperature=0.1,\n",
-    "                  streaming=True,\n",
-    "                  callbacks=[StreamingStdOutCallbackHandler()])\n",
+    "chat = ChatOpenAI(\n",
+    "    temperature=0.1,\n",
+    "    streaming=True,\n",
+    "    callbacks=[\n",
+    "        StreamingStdOutCallbackHandler(),\n",
+    "    ],\n",
+    ")\n",
     "\n",
-    "examples = [\n",
-    "{\n",
-    "\"question\": \"What do you know about France?\",\n",
-    "\"answer\": \"\"\"\n",
-    "Here is what I know:\n",
-    "Capital: Paris\n",
-    "Language: French\n",
-    "Food: Wine and Cheese\n",
-    "Currency: Euro\n",
-    "\"\"\",\n",
-    "},\n",
-    "{\n",
-    "\"question\": \"What do you know about Italy?\",\n",
-    "\"answer\": \"\"\"\n",
-    "I know this:\n",
-    "Capital: Rome\n",
-    "Language: Italian\n",
-    "Food: Pizza and Pasta\n",
-    "Currency: Euro\n",
-    "\"\"\",\n",
-    "},\n",
-    "{\n",
-    "\"question\": \"What do you know about Greece?\",\n",
-    "\"answer\": \"\"\"\n",
-    "I know this:\n",
-    "Capital: Athens\n",
-    "Language: Greek\n",
-    "Food: Souvlaki and Feta Cheese\n",
-    "Currency: Euro\n",
-    "\"\"\",\n",
-    "},\n",
-    "]\n",
-    "    \n",
-    "exmaple_template = \"\"\"\n",
-    "    Human: {question}\n",
-    "    AI: {answer}\"\"\"\n",
+    "chef_template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"you are a best chef. you can create a easy recipes for me with gradients easy to find \",\n",
+    "        ),\n",
+    "        (\"human\", \"I wanna make {cusine} food\"),\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
-    "\n",
-    "prompt = FewShotPromptTemplate(\n",
-    "    example_prompt=example_prompt,\n",
-    "    examples=examples,\n",
-    "    suffix =\"Human:What do you know about {country}?\",\n",
-    "    input_variables=[\"country\"] \n",
-    "    )\n",
-    "\n",
-    "# prompt.format(country= \"Germany\")\n",
-    "chain = prompt | chat\n",
-    "chain.invoke({\n",
-    "    \"country\": \"Turkey\",\n",
-    "\n",
-    "})"
+    "chef_chain = chef_template | chat"
    ]
   },
   {
@@ -77,84 +37,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "\n",
-    "prompt = ChatPromptTemplate.from_template(\"tell me a short joke about {topic} in Korean\")\n",
-    "model = ChatOpenAI(model=\"gpt-4\")\n",
-    "output_parser = StrOutputParser()\n",
-    "\n",
-    "prompt_value = prompt.invoke({\"topic\": \"ice cream\"})\n",
-    "message = model.invoke(prompt_value)\n",
-    "message\n",
-    "\n",
-    "\n",
-    "chain = prompt | model | output_parser\n",
-    "\n",
-    "chain.invoke({\"topic\": \"ice cream\"})\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# chain = prompt | model | output_parser\n",
-    "\n",
-    "# chain.invoke({\"topic\": \"ice cream\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Harrison worked at Kensho.'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Requires:\n",
-    "# pip install langchain docarray tiktoken\n",
-    "\n",
-    "from langchain_community.vectorstores import DocArrayInMemorySearch\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.runnables import RunnableParallel, RunnablePassthrough\n",
-    "from langchain_openai.chat_models import ChatOpenAI\n",
-    "from langchain_openai.embeddings import OpenAIEmbeddings\n",
-    "\n",
-    "vectorstore = DocArrayInMemorySearch.from_texts(\n",
-    "    [\"harrison worked at kensho\", \"bears like to eat honey\"],\n",
-    "    embedding=OpenAIEmbeddings(),\n",
+    "veg_chef_template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a vegetarian chef specialized on making traditional recipies vegetarian. You find alternative ingredients and explain their preparation. You don't radically modify the recipe. If there is no alternative for a food just say you don't know how to replace it.\",\n",
+    "        ),\n",
+    "        (\"human\", \"{recipe}\"),\n",
+    "    ]\n",
     ")\n",
-    "retriever = vectorstore.as_retriever()\n",
     "\n",
-    "template = \"\"\"Answer the question based only on the following context:\n",
-    "{context}\n",
+    "veg_chef = veg_chef_template | chat\n",
     "\n",
-    "Question: {question}\n",
-    "\"\"\"\n",
-    "prompt = ChatPromptTemplate.from_template(template)\n",
-    "model = ChatOpenAI()\n",
-    "output_parser = StrOutputParser()\n",
+    "final_chain = {\"recipe\": chef_chain} | veg_chef\n",
     "\n",
-    "setup_and_retrieval = RunnableParallel(\n",
-    "    {\"context\": retriever, \"question\": RunnablePassthrough()}\n",
-    ")\n",
-    "# retriever.invoke(\"where did harrison work?\")\n",
-    "\n",
-    "# setup_and_retrieval = RunnableParallel(\n",
-    "#     {\"context\": retriever, \"question\": RunnablePassthrough()}\n",
-    "# )\n",
-    "chain = setup_and_retrieval | prompt | model | output_parser\n",
-    "\n",
-    "chain.invoke(\"where did harrison work?\")"
+    "final_chain.invoke({\"cusine\": \"indian\"})"
    ]
   },
   {
@@ -169,10 +66,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
